--- a/index.html
+++ b/index.html
@@ -73,26 +73,22 @@
                 <span class="product-title">Sản phẩm mới nhất</span>
                 <div class="home-sp-moi">
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-1.jpg" width="100%" height="auto" style='margin-top: -30px;' />
+                        <div class="img-container"><img src="nhhoa/HSE3-HoaSen/HSE3-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
-
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-1.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HCTU1-HoaCatTuong/HCTU1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE3-HoaSen/HSE3-1.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Cát Tường - HCTU1<br>40.000 VNĐ/Cành</span>
-
+                        <spanHoa Sen - HSE3<br>199.000 VNĐ/Chậu</span>
                     </div>
+                
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
+                        <div class="img-container"><img src="nhhoa/HSE2-HoaSen/HSE2-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-1.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HMDH1-HoaManDinhHong/HMDH1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE2-HoaSen/HSE2-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE2-HoaSen/HSE2-2.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Mãn Đình Hồng - HMDH1<br>149.000 VNĐ/Chậu</span>
+                        <spanHoa Sen - HSE2<br>199.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
