--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class='product-show' style="display:none">
                             <img src="nhhoa/HSE3-HoaSen/HSE3-1.jpg" width="auto" height="100%" />
                         </div>
-                        <spanHoa Sen - HSE3<br>199.000 VNĐ/Chậu</span>
+                        <span>Hoa Sen - HSE3<br>199.000 VNĐ/Chậu</span>
                     </div>
                 
                     <div class="product">
@@ -90,7 +90,7 @@
                             <img src="nhhoa/HSE2-HoaSen/HSE2-1.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HSE2-HoaSen/HSE2-2.jpg" width="auto" height="100%" />
                         </div>
-                        <spanHoa Sen - HSE2<br>199.000 VNĐ/Chậu</span>
+                        <span>Hoa Sen - HSE2<br>199.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
