--- a/product-catalog.html
+++ b/product-catalog.html
@@ -522,8 +522,6 @@
                         <div class='product-show' style="display:none">
                             <img src="nhhoa/HSE1-HoaSen/HSE1-1.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HSE1-HoaSen/HSE1-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HSE1-HoaSen/HSE1-3.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HSE1-HoaSen/HSE1-4.jpg" width="auto" height="100%" />
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
@@ -550,6 +548,17 @@
 
                         <span><strong>Hoa Sen</strong><br>- HSE3 -<br>199.000 VNĐ/Chậu</span>
                     </div>
+                    
+                    <div class="product-inf hoasen">
+                        <div class='img_container_catalog'><img src="nhhoa/HSE1-HoaSen/HSE1-3.jpg" width="100%" height="auto" style="margin-top: -40px;" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HSE1-HoaSen/HSE1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE1-HoaSen/HSE1-4.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
+
+                        <span><strong>Hoa Sen</strong><br>- HSE4 -<br>239.000 VNĐ/Chậu</span>
+                    </div>
 
                     <div class="product-inf hoasen">
                         <div class='img_container_catalog'><img src="nhhoa/HSE2-BupSen/HSE2-1.jpg" width="100%" height="auto" /></div>
@@ -559,7 +568,7 @@
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
-                        <span><strong>Búp Sen</strong><br>- HSE2 -<br>9.000 VNĐ/Nụ</span>
+                        <span><strong>Búp Sen</strong><br>- HSE0 -<br>9.000 VNĐ/Nụ</span>
                     </div>
 
 
