--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="homepage.js"></script>
 
