--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="contact.js"></script>
-    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
+    <link rel='icon' href='favicon.png' type='image/x-icon'/ >
 
 </head>
 
