--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                         <span>Hoa Đào Bonsai - HDAO2<br>149.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
+                        <div class="img-container"><img src="nhhoa/HMAI1-HoaMai/HMAI1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-1.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-2.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HHM1-HoaHongMon/HHM1-3.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMAI1-HoaMai/HMAI1-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMAI1-HoaMai/HMAI1-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HMAI1-HoaMai/HMAI1-3.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Hồng Môn - HHM1<br>149.000 VNĐ/Chậu</span>
+                        <span>Hoa Mai Bonsai - HMAI1<br>179.000 VNĐ/Chậu</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/HMD1-HoaMauDon/HMD1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" /></div>
