--- a/product-catalog.html
+++ b/product-catalog.html
@@ -744,7 +744,17 @@
 
                         <span><strong>Cỏ May Mắn</strong><br>- HDA5 -<br>79.000 VNĐ/Chậu</span>
                     </div>
+                    
+                    <div class="product-inf hoakhac">
+                        <div class='img_container_catalog'><img src="nhhoa/HLY0-CanhLy/HLY0-1.jpg" width="100%" height="auto" /></div>
+                        <div class='product-show' style="display:none">
+                            <img src="nhhoa/HLY0-CanhLy/HLY0-1.jpg" width="auto" height="100%" />
+                        </div>
+                        <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
+                        <span><strong>Cành Ly</strong><br>- HLY0 -<br>69.000 VNĐ/Cành</span>
+                    </div>
+        
 
                     <div class="product-inf hoakhac">
                         <div class='img_container_catalog'><img src="nhhoa/HLY1-HoaLyLon/HLY1-5.jpg" width="100%" height="auto" /></div>
