--- a/index.html
+++ b/index.html
@@ -84,22 +84,23 @@
                 <span class="product-title">Sản phẩm mới nhất</span>
                 <div class="home-sp-moi">
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HSE3-HoaSen3/HSE3-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
+                        <div class="img-container"><img src="nhhoa/HSE8-HoaSenDai/HSE8-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HSE3-HoaSen3/HSE3-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE8-HoaSenDai/HSE8-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HSE8-HoaSenDai/HSE8-1.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Sen - HSE3<br>199.000 VNĐ/Chậu</span>
+                        <span>Búp Sen Đại - HSE8<br>299.000 VNĐ/Bình</span>
                     </div>
                 
                     <div class="product">
-                        <div class="img-container"><img src="nhhoa/HSE2-HoaSen2/HSE2-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
+                        <div class="img-container"><img src="nhhoa/HLA19-HoaLanDai/HLA19-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
                         </div>
                         <div class='product-show' style="display:none">
-                            <img src="nhhoa/HSE2-HoaSen2/HSE2-1.jpg" width="auto" height="100%" />
-                            <img src="nhhoa/HSE2-HoaSen2/HSE2-2.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HLA19-HoaLanDai/HLA19-1.jpg" width="auto" height="100%" />
+                            <img src="nhhoa/HLA19-HoaLanDai/HLA19-2.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Hoa Sen - HSE2<br>199.000 VNĐ/Chậu</span>
+                        <span>Lan Đại - HLA19<br>799.000 VNĐ/Bình</span>
                     </div>
                     <div class="product">
                         <div class="img-container"><img src="nhhoa/NTX1-NuTamXuan/NTX1-1.jpg" width="100%" height="auto" style="margin-top: -30px;" />
