--- a/product-catalog.html
+++ b/product-catalog.html
@@ -305,7 +305,7 @@
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
-                        <span><strong>Búp Sen Đại</strong><br>- HSE7 -<br>299.000 VNĐ/Bình</span>
+                        <span><strong>Búp Sen Đại</strong><br>- HSE7 -<br>399.000 VNĐ/Bình<br>(Không tính tiền bình)</span>
                     </div>
              
 
@@ -715,7 +715,7 @@
                             <img src="nhhoa/HLA19-HoaLanDai/HLA19-2.jpg" width="auto" height="100%" />
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
-                        <span><strong>Lan Đại</strong><br>- HLA18 -<br>799.000 VNĐ/Bình</span>
+                        <span><strong>Lan Đại</strong><br>- HLA18 -<br>799.000 VNĐ/Bình<br>(Không tính tiền bình)</span>
                     </div>
 
                     <div class="product-inf hoakhac">
