--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <img src="nhhoa/HSE8-HoaSenDai/HSE8-1.jpg" width="auto" height="100%" />
                             <img src="nhhoa/HSE8-HoaSenDai/HSE8-2.jpg" width="auto" height="100%" />
                         </div>
-                        <span>Búp Sen Đại - HSE8<br>299.000 VNĐ/Bình</span>
+                        <span>Sen Đại - HSE8<br>399.000 VNĐ/Bình</span>
                     </div>
                 
                     <div class="product">
