--- a/product-catalog.html
+++ b/product-catalog.html
@@ -305,7 +305,7 @@
                         </div>
                         <p class='kthuoc'>300 cm rộng x 400 cm cao</p>
 
-                        <span><strong>Búp Sen Đại</strong><br>- HSE7 -<br>399.000 VNĐ/Bình<br>(Không tính tiền bình)</span>
+                        <span><strong>Sen Đại</strong><br>- HSE8 -<br>399.000 VNĐ/Bình<br>(Không tính tiền bình)</span>
                     </div>
              
 
