--- a/about.html
+++ b/about.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta lang="vn">
-    <meta name="description" content="Shop Hoa Trang Trí Quà Tặng Mẹ Làm - Chuyên bán hoa voan, hoa vải trang trí; Nhận làm hoa theo yêu cầu; Có hàng ngay sau 3 ngày - Địa chỉ: 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú - Điện thoại: (028) 38162556" />
+    <meta name="description"
+        content="Shop Hoa Trang Trí Quà Tặng Mẹ Làm - Chuyên bán hoa voan, hoa vải trang trí; Nhận làm hoa theo yêu cầu; Có hàng ngay sau 3 ngày - Địa chỉ: 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú - Điện thoại: (028) 38162556" />
     <title>Quà Tặng Mẹ Làm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Barlow|Lora|Open+Sans|Quicksand|Source+Sans+Pro" rel="stylesheet">
-    
+
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    
-    <link rel='icon' href='favicon.png' type='image/x-icon'/ >
+
+    <link rel='icon' href='favicon.png' type='image/x-icon' />
 
 </head>
 
@@ -36,20 +38,29 @@
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </div><i id='icon-menu-2' class="material-icons" style="color: white;">menu</i>
-            <div class="header-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
+            <div class="header-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận,
+                Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028)
+                38162556 </div>
         </div>
         <div class="contact-main">
-            <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i> (028) 38162556 </div>
+            <div class="sub-wrapper-call"> <i class="material-icons" style="vertical-align:middle;">store</i> 30/44 Đỗ
+                Nhuận, Sơn Kỳ, Tân Phú, TP.HCM<br><i class="material-icons" style="vertical-align:middle;">call</i>
+                (028) 38162556 </div>
             <div class="shopinf" style='width:90%;'>
                 <h4>QUÀ TẶNG MẸ LÀM</h4><br>
                 <span>
-                    <p>Từ đam mê làm hoa bằng vải voan, học hỏi trên các trang mạng, Mẹ đã sáng tạo, tìm tòi và biến đam mê của mình thành những sản phẩm tuyệt đẹp.<p>Chúng tôi tin rằng mỗi một chậu hoa sẽ là một món quà ý nghĩa nhất, tỉ mỉ nhất
+                    <p>Từ đam mê làm hoa bằng vải voan, học hỏi trên các trang mạng, Mẹ đã sáng tạo, tìm tòi và biến đam
+                        mê của mình thành những sản phẩm tuyệt đẹp.<p>Chúng tôi tin rằng mỗi một chậu hoa sẽ là một món
+                            quà ý nghĩa nhất, tỉ mỉ nhất
                             của Mẹ.</p>
-                        <p>Rất mong sẽ nhận được nhiều và nhiều hơn nữa sự ủng hộ của quý khách dành cho các sản phẩm của chúng tôi để Mẹ có thêm động lực sáng tạo ra thêm thật nhiều món quà đẹp hơn từ vải voan.</p>
+                        <p>Rất mong sẽ nhận được nhiều và nhiều hơn nữa sự ủng hộ của quý khách dành cho các sản phẩm
+                            của chúng tôi để Mẹ có thêm động lực sáng tạo ra thêm thật nhiều món quà đẹp hơn từ vải
+                            voan.</p>
                         <p>
                             Xin trân trọng cảm ơn!</p>
 
-                </span><br><img src="christian-widell-93945-unsplash.jpg" width="100%" height='auto' style='max-width:1000px;' />
+                </span><br><img src="christian-widell-93945-unsplash.jpg" width="100%" height='auto'
+                    style='max-width:1000px;' />
             </div>
 
         </div>
@@ -58,10 +69,9 @@
         </div>
         <div class='hotline'><a href='tel:02838162556' class='material-icons'>call</a></div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-    <script src="contact.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 
 </html>
-
