--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 style="font-size: 2em;  width: 100%;  max-width: 1200px;  height: 2em;  padding-top: 20px;padding-bottom: 20px;                        text-align: center">
                 Bộ Sưu Tập</div>
             <div class="catalog">
-                <div class="catalog-img"><a href="product-catalog.html#lancheck"><img src="nhhoa/BoSuuTap/HoaLanBST.png"
+                <div class="catalog-img"><a href="product-catalog.html#lancheck"><img src="nhhoa/BoSuuTap/HoaLanBST.jpg"
                             style="background-color: white;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Lan</div>
                     </a></div>
@@ -74,11 +74,11 @@
                             src="nhhoa/BoSuuTap/HoaHongBST.jpg" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Hồng</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#sencheck"><img src="nhhoa/BoSuuTap/HoaSenBST.png"
+                <div class="catalog-img"><a href="product-catalog.html#sencheck"><img src="nhhoa/BoSuuTap/HoaSenBST.jpg"
                             style="background-color:#ffeb93 ;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Sen</div>
                     </a></div>
-                <div class="catalog-img"><a href="product-catalog.html#daicheck"><img src="nhhoa/BoSuuTap/HoaDaiBST.png"
+                <div class="catalog-img"><a href="product-catalog.html#daicheck"><img src="nhhoa/BoSuuTap/HoaDaiBST.jpg"
                             style="background-color:#ffeb93 ;" width="100%" height="auto" />
                         <div class="catalog-title">Hoa Dại</div>
                     </a></div>
