insert meta google text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="Quà Tặng Mẹ Làm" />
     <title>Quà Tặng Mẹ Làm</title>
 
-
+    <meta name="google-site-verification" content="lXWo_9DkpuysKMJPwAauifGyOO5lm-xUTbyfJU-el78" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
         href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
